fix(css): no line-breaks in cc-selectbox
also has a fix in sofa

fixes #361

--- a/assets/scss/themes/default/theme.scss
+++ b/assets/scss/themes/default/theme.scss
@@ -193,6 +193,12 @@ input[type="checkbox"]:focus + .topcoat-checkbox__checkmark:before {
     & + .cc-select-box {
         margin-top: 6px;
     }
+
+    .cc-select-box__display-value {
+        // full-width minus icon width, for those who can handle calc()
+        width: -webkit-calc(100% - 50px);
+        width:         calc(100% - 50px);
+    }
 }
 /*  ===========================================================================
     MEDIA-QUERY-SAVE @extend
